[gd_scene load_steps=2 format=3 uid="uid://dhiwrudifl2d5"]

[ext_resource type="Script" path="res://scripts/ExpenseList.gd" id="1_pi71q"]

[node name="ExpenseList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pi71q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.243137, 0.576471, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Expenses"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Expenses" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListEntry" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 0
offset_top = 27.0
offset_right = 1152.0
offset_bottom = 77.0

[node name="HBoxContainer" type="HBoxContainer" parent="ListEntry"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Spacing" type="Label" parent="ListEntry/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Name" type="Label" parent="ListEntry/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Text 1"

[node name="Cost" type="Label" parent="ListEntry/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Text 2"

[node name="Spacing2" type="Label" parent="ListEntry/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="ModPopup" type="PopupPanel" parent="."]
auto_translate_mode = 1
initial_position = 1
size = Vector2i(116, 219)

[node name="VBoxContainer" type="VBoxContainer" parent="ModPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 215.0

[node name="NameChangeLabel" type="Label" parent="ModPopup/VBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="NameChangeEdit" type="LineEdit" parent="ModPopup/VBoxContainer"]
layout_mode = 2

[node name="CostChangeLabel" type="Label" parent="ModPopup/VBoxContainer"]
layout_mode = 2
text = "Amount:	"

[node name="CostChangeEdit" type="LineEdit" parent="ModPopup/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ModPopup/VBoxContainer"]
layout_mode = 2

[node name="FixChangeLabel" type="Label" parent="ModPopup/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Fixed:"

[node name="FixedCheck" type="CheckBox" parent="ModPopup/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="ModPopup/VBoxContainer"]
layout_mode = 2

[node name="DeleteLabel" type="Label" parent="ModPopup/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Delete:"

[node name="DeleteCheck" type="CheckBox" parent="ModPopup/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ModPopup/VBoxContainer"]
layout_mode = 2

[node name="Ok" type="Button" parent="ModPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Cancel" type="Button" parent="ModPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"
